hide dummy video

--- a/vipleff.html
+++ b/vipleff.html
@@ -80,7 +80,7 @@ div {
 <h1>Filtered Video</h1>
 <canvas id="filtered" width="800" height="600"/></canvas>
 </div>
-<div>
+<div hidden>
 <h1>Dummy Video</h1>
 <canvas id="twin" width="800" height="600"></canvas>
 </div>
