--- a/vipleff.html
+++ b/vipleff.html
@@ -59,6 +59,14 @@ var process = {
 			case "22":
 				blue(frame);
 				break;
+			case "50":
+				var frame_gray = this.ctxTwin.getImageData(0, 0, this.orig.videoWidth, this.orig.videoHeight);
+				simpleEdge(frame, frame_gray, this.orig.videoWidth, this.orig.videoHeight);
+				break;
+			case "51":
+				var frame_gray = this.ctxTwin.getImageData(0, 0, this.orig.videoWidth, this.orig.videoHeight);
+				simpleSketch(frame, frame_gray, this.orig.videoWidth, this.orig.videoHeight);
+				break;
 			default:
 		}
 		this.ctxFiltered.putImageData(frame, 0, 0);
@@ -120,6 +128,65 @@ function blue(frame) {
 	}
 }
 
+//function convoluteGray
+
+function simpleEdge(frame, frame_gray, width, height) {
+	grayscale(frame_gray);
+	//var kernel = [[ 0,  1,  0],
+	//			  [ 1, -4,  1],
+	//			  [ 0,  1,  0]];
+	var kernel = [[-1, -1, -1],
+				  [-1,  8, -1],
+				  [-1, -1, -1]];
+	for (var x = 0; x < width; ++x) {
+		for (var y = 0; y < height; ++y) {
+			var accumulator = 0;
+			for (var u = -1; u < 2; ++u) {
+				for (var v = -1; v < 2; ++v) {
+					var tmp;
+					if (((x + u) < 0) || ((x + u) >= width) || ((y + v) < 0) || ((y + v) >= height)) {
+						tmp = frame_gray.data[4 * x + 4 * y * width];
+					} else {
+						tmp = frame_gray.data[4 * (x + u) + 4 * (y + v) * width];
+					}
+					accumulator += tmp * kernel[u + 1][v + 1];
+				}
+			}
+			frame.data[4 * x + 4 * y * width] = accumulator;
+			frame.data[4 * x + 4 * y * width + 1] = accumulator;
+			frame.data[4 * x + 4 * y * width + 2] = accumulator;
+		}
+	}
+}
+
+function simpleSketch(frame, frame_gray, width, height) {
+	grayscale(frame_gray);
+	//var kernel = [[ 0,  1,  0],
+	//			  [ 1, -4,  1],
+	//			  [ 0,  1,  0]];
+	var kernel = [[-1, -1, -1],
+				  [-1,  8, -1],
+				  [-1, -1, -1]];
+	for (var x = 0; x < width; ++x) {
+		for (var y = 0; y < height; ++y) {
+			var accumulator = 0;
+			for (var u = -1; u < 2; ++u) {
+				for (var v = -1; v < 2; ++v) {
+					var tmp;
+					if (((x + u) < 0) || ((x + u) >= width) || ((y + v) < 0) || ((y + v) >= height)) {
+						tmp = frame_gray.data[4 * x + 4 * y * width];
+					} else {
+						tmp = frame_gray.data[4 * (x + u) + 4 * (y + v) * width];
+					}
+					accumulator += tmp * kernel[u + 1][v + 1];
+				}
+			}
+			frame.data[4 * x + 4 * y * width + 3] = accumulator;
+		}
+	}
+}
+
+
 
 </script>
 
@@ -146,6 +213,8 @@ div {
 	<option value=20>red</option>
 	<option value=21>green</option>
 	<option value=22>blue</option>
+	<option value=50>simpleEdges</option>
+	<option value=51>simpleSketch</option>
   read</select>
 </header>
 <div>
