--- a/vipleff.html
+++ b/vipleff.html
@@ -50,6 +50,9 @@ var process = {
 			case "3":
 				sabattier(frame);
 				break;
+			case "4":
+				sepia(frame);
+				break;
 			case "20":
 				red(frame);
 				break;
@@ -75,6 +78,9 @@ var process = {
 				break;
 			case "200":
 				old(frame);
+				break;
+			case "201":
+				oldS(frame);
 				break;
 			default:
 		}
@@ -114,6 +120,23 @@ function sabattier(frame) {
 	    frame.data[i + 1] = g;
         frame.data[i + 2] = b;
 	}
+}
+
+function sepia(frame) {
+    for (var i = 0; i < frame.data.length; i += 4) {
+        var r = frame.data[i];
+        var g = frame.data[i+1];
+        var b = frame.data[i+2];
+        var sepiaRed = r*0.393 + g*0.769 + b*0.189;
+        var sepiaGreen = r*0.349 + g*0.686 + b*0.168;
+        var sepiaBlue = r*0.272 + g*0.534 + b*0.131;
+        if(sepiaRed > 255) sepiaRed = 255;
+        if(sepiaGreen > 255) sepiaGreen = 255;
+        if(sepiaBlue > 255) sepiaBlue = 255;
+        frame.data[i] = sepiaRed;
+        frame.data[i+1] = sepiaGreen;
+        frame.data[i+2] = sepiaBlue;
+    }
 }
 
 function red(frame) {
@@ -227,8 +250,33 @@ function old(frame) {
 			frame.data[i + 1] = 0;
 			frame.data[i + 2] = 0;
 		}
+	} else if (Math.random > 0.99) {
+		for (var i = 0; i < frame.data.length; i += 4) {
+			frame.data[i] = 255;
+			frame.data[i + 1] = 255;
+			frame.data[i + 2] = 255;
+		}
 	} else {
 		grayscale(frame);
+		saltAndPepperNoise(frame);
+	}
+}
+
+function oldS(frame) {
+	if (Math.random() > 0.9) {
+		for (var i = 0; i < frame.data.length; i += 4) {
+			frame.data[i] = 0;
+			frame.data[i + 1] = 0;
+			frame.data[i + 2] = 0;
+		}
+	} else if (Math.random > 0.99) {
+		for (var i = 0; i < frame.data.length; i += 4) {
+			frame.data[i] = 255;
+			frame.data[i + 1] = 255;
+			frame.data[i + 2] = 239;
+		}
+	} else {
+		sepia(frame);
 		saltAndPepperNoise(frame);
 	}
 }
@@ -257,6 +305,7 @@ function old(frame) {
 				<option value=1>grayscale</option>
 				<option value=2>negative</option>
 				<option value=3>sabattier</option>
+				<option value=4>sepia</option>
 				<option value=20>red</option>
 				<option value=21>green</option>
 				<option value=22>blue</option>
@@ -264,7 +313,8 @@ function old(frame) {
 				<option value=50>simple edges</option>
 				<option value=51>simple sketch</option>
 				<option value=100>salt'n'pepper noise</option>
-				<option value=200>old</option>
+				<option value=200>old gray</option>
+				<option value=201>old sepia</option>
 			</select>
 		</header>
 		<div>
